# MPointers2

./: .cursorignore  .gitignore  CMakeLists.txt  README.md
src/: CMakeLists.txt
src/memory_manager/: CMakeLists.txt  garbage_collector.cpp  garbage_collector.h  main.cpp  memory_block.cpp  memory_block.h  memory_manager.cpp  memory_manager.h
src/mpointers/: CMakeLists.txt  mpointer.cpp  mpointer.h  node.h
src/proto/: CMakeLists.txt  memory_service.proto
tests/: CMakeLists.txt  grpc_test.cpp  linked_list_test.cpp  simple_test.cpp
